# validations/user-validator.js
@@ -2,8 +2,9 @@ const { check, validationResult } = require("express-validator");
 
 const validationRules = () => {
     return [
+        check("firstname").trim().isLength({ min: 1, max: 20 }).withMessage("Name must be between 1 and  20 characters"),
+        check("lastname").trim().isLength({ min: 1, max: 20 }).withMessage("Name must be between 1 and 20 characters"),
         check("email").trim().isEmail().normalizeEmail().withMessage("Please enter a valid email"),
-        check("name").trim().isLength({ min: 1, max: 20 }).withMessage("Name must be between 1 and 20 characters"),
         check("password").trim().isLength({ min: 6, max: 16 }).withMessage("Password must be between 6 and 16 characters")
     ]
 };
